--- a/src/app/home/components/product-card/product-card.component.scss
+++ b/src/app/home/components/product-card/product-card.component.scss
@@ -5,4 +5,9 @@
     .action {
         padding: 0 12px;
     }
+
+    .title {
+        display: flex;
+        justify-content: space-between;
+    }
 }
