--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -35,7 +35,7 @@ nz-content {
 }
 
 .inner-content {
-    padding: 25px;
+    padding: 5% 20%;
     background: #fff;
     height: 100%;
     overflow: auto;
