--- a/src/app/home/components/product-card/product-card.component.html
+++ b/src/app/home/components/product-card/product-card.component.html
@@ -1,41 +1,18 @@
-<nz-card
-    nzHoverable
-    style="width: 240px"
-    [nzCover]="coverTemplate"
-    [nzLoading]="!product"
-    [nzActions]="[actionQuantity, actionAdd]"
->
-    <nz-card-meta
-        [nzTitle]="title"
-        [nzDescription]="product.description"
-    ></nz-card-meta>
+<nz-card nzHoverable [nzCover]="coverTemplate" [nzLoading]="!product" [nzActions]="[actionQuantity, actionAdd]">
+    <nz-card-meta [nzTitle]="title" [nzDescription]="product.description"></nz-card-meta>
 </nz-card>
 <ng-template #coverTemplate>
-    <img
-        [src]="product.url"
-        alt="product-img"
-    />
+    <img [routerLink]="['/', 'home', 'products', product.id]" [src]="product.url" alt="product-img" />
 </ng-template>
 <ng-template #actionQuantity>
     <div class="action">
-        <nz-input-number
-            [(ngModel)]="quantity"
-            [nzMin]="1"
-            [nzStep]="1"
-        ></nz-input-number>
+        <nz-input-number [(ngModel)]="quantity" [nzMin]="1" [nzStep]="1"></nz-input-number>
     </div>
 </ng-template>
 <ng-template #actionAdd>
     <div class="action">
-        <button
-            nz-button
-            nzBlock
-            nzType="primary"
-        >
-            <span
-                nz-icon
-                nzType="plus"
-            ></span>
+        <button (click)="onClickBtnAdd($event)" nz-button nzBlock nzType="primary">
+            <span nz-icon nzType="plus"></span>
             Add
         </button>
     </div>
