--- a/src/app/home/pages/cart/cart.component.scss
+++ b/src/app/home/pages/cart/cart.component.scss
@@ -1,8 +1,7 @@
 :host {
-    form, .total {
+    form {
         position: sticky;
         top: 0;
         z-index: 10;
-        background: #fff;
     }
 }
